[project]
name = "gridwatch"
version = "0.1.0"
description = "A simple CRUD API to store measurements from IoT devices monitoring energy consumption in the power grid"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.2",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.3",
    "locust>=2.32.3",
    "mypy>=1.12.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.7.0",
    "types-passlib>=1.7.7.20240819",
]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
